<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DBActivity">

    <TextView
        android:id="@+id/dbAddMenuRecordHeader"
        android:layout_width="match_parent"
        android:text="@string/db_add_menu_header_text"
        android:textAlignment="center"
        android:layout_marginTop="180sp"
        android:layout_marginBottom="10sp"
        android:textSize="25sp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/dbAddMenuYearUserText"
        android:layout_below="@+id/dbAddMenuRecordHeader"
        android:layout_width="match_parent"
        android:hint="@string/db_add_menu_year_text"
        android:layout_marginHorizontal="100sp"
        android:layout_height="wrap_content"
        android:autofillHints="Enter year" />

    <EditText
        android:id="@+id/dbAddMenuWeightUserText"
        android:layout_below="@+id/dbAddMenuYearUserText"
        android:layout_width="match_parent"
        android:hint="@string/db_add_menu_weight_text"
        android:layout_marginHorizontal="100sp"
        android:layout_height="wrap_content"
        android:autofillHints="Enter year" />

    <Button
        android:id="@+id/dbAddMenuSaveButton"
        android:layout_below="@+id/dbAddMenuWeightUserText"
        android:layout_marginHorizontal="100sp"
        android:text="@string/db_add_menu_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/dbAddMenuReturnButton"
        android:layout_below="@+id/dbAddMenuSaveButton"
        android:layout_marginHorizontal="100sp"
        android:text="@string/db_add_menu_return_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>