<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ContactsActivity">

        <LinearLayout
            android:id="@+id/ContactsHeaderLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/ContactsHeaderText"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_marginTop="10sp"
                android:layout_marginHorizontal="20sp"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_contacts" />

            <Button
                android:id="@+id/ContactsReturnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginVertical="7sp"
                android:text="@string/db_add_menu_return_button"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ContactsMainTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ContactsHeaderLine"
            android:layout_marginBottom="30sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ContactsElemNameHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textAlignment="center"
                android:text="@string/contacts_table_name" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ContactsNeedTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ContactsMainTable"
            android:layout_marginBottom="30sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ContactsNeedElemNameHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textAlignment="center"
                android:text="@string/contacts_need_table_name" />


        </LinearLayout>
    </RelativeLayout>


</ScrollView>