<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DBActivity">

        <LinearLayout
            android:id="@+id/dbHeaderLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/DBHeaderText"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_marginTop="10sp"
                android:layout_marginHorizontal="20sp"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_contacts" />

            <Button
                android:id="@+id/dbMenuReturnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginVertical="7sp"
                android:text="@string/db_add_menu_return_button"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/dbMenuHeaderLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/dbHeaderLine"
            android:orientation="horizontal">

            <Button
                android:id="@+id/DBAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginVertical="7sp"
                android:text="@string/db_add_button"/>

            <TextView
                android:id="@+id/dbAvgPriceText"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content"
                android:text="@string/db_header_line_avg" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dbMenuDataTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/dbMenuHeaderLine"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dbElemColYearHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/db_elem_year_header_text" />

                <TextView
                    android:id="@+id/dbElemColWightHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/db_elem_weight_header_text" />

                <TextView
                    android:id="@+id/dbElemColPriceHeader"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/db_elem_price_header_text" />

                <Button
                    android:id="@+id/dbElemDellButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:background="#fff"
                    android:textAllCaps="false"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/dbBestRecordHeader"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:textSize="17sp"
            android:layout_below="@id/dbMenuDataTable"
            android:layout_marginVertical="20sp"
            android:layout_marginHorizontal="5sp"
            android:layout_height="wrap_content"
            android:text="@string/db_best_record_header_text" />

        <LinearLayout
            android:id="@+id/dbMenuBestDataTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/dbBestRecordHeader"
            android:layout_marginBottom="30sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dbBestElemColYearHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/db_elem_year_header_text" />

                <TextView
                    android:id="@+id/dbBestElemColWightHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/db_elem_weight_header_text" />

                <TextView
                    android:id="@+id/dbBestElemColPriceHeader"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/db_elem_price_header_text" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>